<resources>
    <string name="app_name">AppSeguros</string>
    <string name="title_activity_login">LoginActivity</string>
    <string-array name="types">
        <item>Electricidad</item>
        <item>Carpintería</item>
        <item>Fontanería</item>
    </string-array>
    <string name="titulo_historial">Solicitudes</string>
    <string name="texto_boton_agregar">Agregar</string>
    <string name="texto_boton_cancelar">Cancelar</string>
    <string name="navegacion_siniestro">Siniestro</string>
    <string name="navegacion_bricolaje">Bricolaje</string>
    <string name="descripcion">Descripción</string>
    <string name="adjuntar_imagen">Adjuntar Imagen</string>
    <string name="inicio">Inicio</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="domicilio">Domicilio</string>
    <string name="alta_siniestros">Alta Siniestros</string>
    <string name="volver">Volver</string>
    <string name="alta_bricolaje">Alta Bricolaje</string>
    <string name="servicios_disponibles_3">Servicios disponibles: 3</string>
    <string name="tipo">tipo</string>
    <string name="descripcion_dobles_puntos">Descripcion:</string>
    <string name="fecha_dobles_puntos">Fecha:</string>
    <string name="hora_doble_puntos">Hora:</string>
    <string name="domicilio_dobles_puntos">Domicilio:</string>
    <string name="alta_siniestro">Alta Siniestro</string>
    <string name="tipo_dobles_puntos">Tipo:</string>
    <string name="en_construccion">En Construcción</string>
    <string name="nombre_dobles_puntos">Nombre:</string>
    <string name="apellidos_dobles_puntos">Apellidos:</string>
    <string name="dni_dobles_puntos">DNI:</string>
    <string name="correo_electronico_dobles_puntos">Correo electrónico:</string>
    <string name="cuenta_bancaria_dobles_puntos">Cuenta bancaria:</string>
    <string name="mensaje_registro">Regístrate para poder tener soporte</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="dni">DNI</string>
    <string name="email">Email</string>
    <string name="contrasenha">Contraseña</string>
    <string name="cuenta_de_banco">Cuenta de Banco</string>
    <string name="registrarse">Registrarse</string>
    <string name="actualizar">Actualizar</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="main_dar_alta_siniestro">Dar de alta un siniestro</string>
    <string name="main_dar_alta_servicio_bricolaje">Dar de alta un servicio de bricolaje</string>
    <string name="main_cambiar_datos_usuario">Cambiar datos del usuario</string>
    <string name="inicio_de_sesion">Inicio de Sesión</string>
    <string name="pregunta_tienes_cuenta">¿No tienes una cuenta?</string>
    <string name="registrate_aqui">Regístrate aqui</string>
    <string name="olvidaste_contrasenha">¿Olvidaste tu contraseña?</string>
    <string name="pregunta_home_como_ayudar">¿Cómo te podemos ayudar hoy?</string>
    <string name="txt_home_gestionar_siniestros">Gestionar siniestros en el hogar</string>
    <string name="home_dar_alta_siniestro">Da de alta un siniestro</string>
    <string name="home_gestionar_servicio_bricolaje">Gestionar un servicio de bricolaje</string>
    <string name="home_dar_alta_servicio_bricolaje">Da de alta el servicio que deseas</string>
    <string name="home_historial_solicitudes">Historial de solicitudes</string>
    <string name="home_visualizar_estado_solicitud">Visualiza el estado de tu solicitud</string>
    <string name="registrado">Registrado</string>
    <string name="servicio">Servicio</string>
    <string name="perfil_actualiza_modifica_datos">Actualiza o modifica tus datos</string>
</resources>